tests/compile-fail/integration_suite__integration__general__arg_count_range.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: wrong number of arguments to 'ins_2'
   ┌─ <input>:21:9
   │
21 │         ins_2();
   │         ^^^^^ expects 1 to 3 arguments, got 0


